// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserMessage Component matches the snapshot for sender "me" 1`] = `
<DocumentFragment>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-vxkaue-MuiListItem-root"
  >
    <div
      class="MuiBox-root css-1s5swuj"
    >
      Snapshot test for me.
    </div>
  </li>
</DocumentFragment>
`;

exports[`UserMessage Component matches the snapshot for sender "them" 1`] = `
<DocumentFragment>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-8lquas-MuiListItem-root"
  >
    <div
      class="MuiBox-root css-1wkdbaz"
    >
      Snapshot test for them.
    </div>
  </li>
</DocumentFragment>
`;
